--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               type="button"
               value="c"
               class="btn"
-              onclick="cal.disp.value ='0'"
+              onclick="cal.disp.value =''"
             />
             <input
               type="button"
